# ada-learning

./: .gitignore  README.md  README.rst
ansible.com/: README.md
argo-cd.readthedocs.io/: README.md
docker.com/selenium+python+google-chrome/: Dockerfile  Makefile  README.rst  app.py  client.py  server.py
getutm.app/: README.md
gitlab.com/: README.md  argo-cd.yaml
goharbor.io/: README.md  argo-cd.yaml
google.com/: .gitignore  Makefile  README.md  README.rst  ansible.yaml  setup.cfg
google.com/conf.d/: google_com_client_secrets_file.sample.json  google_com_config.sample.json  private-enchant-dictionary.txt
google.com/requirements/: dev.txt  prod.txt
google.com/src/: quickstart.py
google.com/src/ada_google_com/: cli.py  common.py  env.py  gmail.py  sheets.py
google.com/src/conf.d/: service_account_file.sample.json  sources.sample.json
google.com/tests/: test_cli.py  test_gmail.py  test_quickstart.py  test_sheets.py
jenkins.io/: README.md  argo-cd.yaml  plugins.txt
kind.sigs.k8s.io/: Makefile  README.md  bash.py  config.template.yaml  config.yml  config_template.py  deploy.py  deploy.sh  kind-with-registry.sh  run.sample.sh
kubernetes.io/: README.md
lima-vm.io/: README.md
minikube.sigs.k8s.io/: README.md
mozilla.org/: README.md
mozilla.org/firefox/: README.md  query.md
nixos.org/: README.md
podman.io/: build_docker_image_with_podman.sh
qemu.org/: README.md
terraform.io/aws.com/ec2/: README.md  main.tf
