[metadata]
name = ada_google_com
version = 0.1.0
description = ada google automation☺
license = MIT License
requires-python = ">=3.8"

[options]
package_dir=
    =src
packages = find:
install_requires =
    PyYAML==6.0.1
    click==8.1.3  # handle cli arguments and functions
    google-api-python-client==2.95.0
    google-auth-httplib2==0.1.0
    google-auth-oauthlib==1.0.0
    pydantic==2.2.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pylint
    mypy
    coverage
    pytest
    types-PyYAML

[options.entry_points]
console_scripts =
    ada_google_com = ada_google_com.cli:entry_point


[mypy]
strict = True
show_error_codes = True

[mypy-google.oauth2.*]
ignore_missing_imports = True

[mypy-google.auth.*]
ignore_missing_imports = True

[mypy-google_auth_oauthlib.flow.*]
ignore_missing_imports = True

[mypy-googleapiclient.*]
ignore_missing_imports = True

[isort]
known_typing=typing
known_localfolder=ada_google_com
sections=FUTURE,TYPING,STDLIB,FIRSTPARTY,THIRDPARTY,LOCALFOLDER

[coverage:run]
branch=True
source=src

[coverage:report]
fail_under=59
show_missing=True

[tool:pytest]
addopts = --strict-markers -m 'not integration' -v
markers =
    integration
testpaths = tests
filterwarnings =
    error
